# bmbp_config

./: .gitignore  Cargo.toml  README.md
config/: bmbp.toml
crates/bmbp_config/: Cargo.toml
crates/bmbp_config/src/: init.rs  lib.rs
crates/bmbp_config/src/action/: bean.rs  dict.rs  mod.rs
crates/bmbp_config/src/action/dict/: action.rs  bean.rs  service.rs
crates/bmbp_config/src/action/vars/: mod.rs
crates/bmbp_config/src/view/: mod.rs
crates/bmbp_config/tests/: test_bean.rs
crates/bmbp_config/web/jsx/dict/: action.jsx  index.jsx
crates/bmbp_config/web/static/css/: config.css
crates/bmbp_config/web/static/js/dict/: index.js
crates/bmbp_config/web/static/js/vars/: index.js
crates/bmbp_config/web/tmplate/: dict.html
crates/bmbp_config/web/tsx/dict/: action.tsx  index.tsx
crates/bmbp_config/web/tsx/dict/form/: dialog.tsx  form.tsx
crates/bmbp_curd/: Cargo.toml
crates/bmbp_curd/src/: dao.rs  service.rs
crates/demo_app/: Cargo.toml
crates/demo_app/src/: main.rs
src/: lib.rs
src/action/dict/: action.rs  bean.rs  mod.rs  service.rs
src/action/vars/: action.rs  bean.rs  service.rs
src/view/: mod.rs
web/static/js/dict/: index.js
web/static/js/vars/: index.js
web/template/: vars.html
web/tsx/dict/: action.tsx  index.tsx
web/tsx/dict/form/: dialog.tsx  form.tsx
web/tsx/vars/: action.tsx  index.tsx
web/tsx/vars/form/: dialog.tsx  form.tsx
