[workspace]
members = ["crates/*"]
resolver = "2"
[workspace.package]
version = "0.0.0"
edition = "2021"
authors = ["bmbp<rs_bmbp.163.com>"]
description = "BMBP CONFIG MODULE"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/bmbper/bmbp_config"
repository = "https://github.com/bmbper/bmbp_config"
documentation = "https://github.com/bmbper/bmbp_config"
[workspace.dependencies]
bmbp_config = { version = "0.0.0", path = "crates/bmbp_config" }
demmo_app = { version = "0.0.0", path = "crates/demo_app" }

# 宏
bmbp_marco_rdbc = "0.0.7"
# 全局参数
bmbp_ctx_vars = "0.1.1"
# 静态资源
bmbp_lib_ui = "0.1.1"
bmbp_rdbc_type = "0.2.4"
bmbp_http_type = "0.0.4"


rust-embed = "8.5.0"
salvo = { version = "0.69.0", features = [
    "default",
    "serve-static",
    "cors",
    "size-limiter",
    "logging",
] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.10"
serde_repr = "0.1.19"
tokio = { version = "1.38.0", features = ["full"] }
tokio-postgres = { version = "0.7.10", features = ["with-chrono-0_4"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tera = "1.20.0"
