[workspace]
members = ["crates/*"]
resolver = "2"
[workspace.package]
version = "0.0.0"
edition = "2021"
authors = ["bmbp<rs_bmbp.163.com>"]
description = "BMBP CONFIG MODULE"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/bmbper/bmbp_config"
repository = "https://github.com/bmbper/bmbp_config"
documentation = "https://github.com/bmbper/bmbp_config"
[workspace.dependencies]
bmbp_config = { version = "0.0.0", path = "crates/bmbp_config" }

demmo_app = { version = "0.0.0", path = "crates/demo_app" }

# 宏
bmbp_marco_bean = "0.0.8"
bmbp_marco_rdbc = "0.0.11"
bmbp_util = "0.0.3"
bmbp_app_util = "0.0.2"
# 静态资源
bmbp_lib_ui = "0.1.5"
# 认证信息
bmbp_auth = "0.0.2"
# 全局参数
bmbp_ctx_vars = "0.1.1"
# http返回状态
bmbp_http_type = "0.0.6"
# 数据库类型
bmbp_rdbc_type = "0.2.5"
bmbp_rdbc_orm = "0.2.5"



rust-embed = "8.5.0"
salvo = { version = "0.71.1", features = [
    "default",
    "serve-static",
    "cors",
    "size-limiter",
    "logging",
] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.10"
serde_repr = "0.1.19"
tokio = { version = "1.38.0", features = ["full"] }
tokio-postgres = { version = "0.7.10", features = ["with-chrono-0_4"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tera = "1.20.0"
once_cell = "1.19.0"
async_static = "0.1.3"
